--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ ZaparooEsp32/ZaparooEsp32.hpp
 svelte-esp32/package-lock.json
 /web/.vscode
 svelte-esp32/.env
+ZaparooEsp32/build/esp32.esp32.esp32/ZaparooEsp32.ino.bin
+ZaparooEsp32/build/esp32.esp32.esp32/ZaparooEsp32.ino.bootloader.bin
+ZaparooEsp32/build/esp32.esp32.esp32/ZaparooEsp32.ino.elf
+ZaparooEsp32/build/esp32.esp32.esp32/ZaparooEsp32.ino.map
+ZaparooEsp32/build/esp32.esp32.esp32/ZaparooEsp32.ino.merged.bin
+ZaparooEsp32/build/esp32.esp32.esp32/ZaparooEsp32.ino.partitions.bin
